--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,3 @@
-click==8.1.3
-Flask==2.2.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-Werkzeug==2.2.2
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
@@ -13,6 +7,7 @@ cssutils==2.6.0
 dkimpy==1.0.5
 dnspython==2.2.1
 Flask==2.2.2
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 jaraco.classes==3.2.3
@@ -22,6 +17,7 @@ lxml==4.9.1
 MarkupSafe==2.1.1
 more-itertools==8.14.0
 premailer==3.10.0
+python-decouple==3.6
 requests==2.28.1
 urllib3==1.26.12
 validate-email==1.3
